Latest change updated 01-10-2013 Version 0.5c

Jack Kamm has recommended a change to the calculation of the random exponential draw to prevent the rare event the the uniform RNG returns 0.  This is now implemented in simulator.h

Latest change updated 01-10-2013 Version 0.5b

A bug was found in msformat.cpp and this has been fixed.  Also, for complicated population joining and splitting events, event times need to reflect a unique order.  Very close times should be mathematically close enough (e.g. for two events of the same time 0.00011 vs 0.00012 if .000105 was the intended time).  Note that when migration and split event proportions are small that there may be insufficient chromosomes to execute the event.  User friendlier messages are now added when an exception is thrown.

Latest change updated 12-13-2012 Version 0.5a

I have added a change to the output of segregating sites to support listing of the age of mutations.  This is the third column, preceding the column of bits representing the mutations across all haplotypes.  The msformat.cpp parser has been updated to accommodate this change.

Latest change updated 08-13-2012 Version 0.4f

Stephan Schiffels gratefully fixed a bug in which precision of tree length would progressively degrade as trees were sampled from left to right on the chromosome. 

Latest change updated 11-09-2011 Version 0.4e

Thanks to Etienne Patin for pointing out a bug where SNP ascertainment failed when more than one simulation iteration was requested.  The bug is now fixed.  Vincenza Colonna pointed out discrepancies in the information headers regarding population IDs.  The headers now refer to populations as 1-indexed wheras previously some 0-indexed pop IDs were printed to screen. Note that users should refer to populations using 1-indexed pop IDs.

Latest change updated 4-26-2011 Version 0.4d
