@@ -1,3 +1,7 @@
+Latest change updated 01-10-2013 Version 0.5d
+
+PingHsun pointed out a bug as where it was "found that as long as the migration rate is set to be zero after the last merge event, the amount of mutations generated by MaCS looks good. Thus I suspect what I observed might be caused by the non-zero migration rate after the last merge event."  I have fixed the code in traversing events where upon a join event, the migration matrix elements for the defunct population are appropriately set to zero. 
+
 Latest change updated 01-10-2013 Version 0.5c
 
 Jack Kamm has recommended a change to the calculation of the random exponential draw to prevent the rare event the the uniform RNG returns 0.  This is now implemented in simulator.h
